Remove intro load animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ body {
 }
 
 .intro {
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
