--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,13 +177,31 @@ body {
 }
 
 .footer-container {
-  position: absolute;
+  position: fixed;
+  background-color: #EFFBFF;
   padding-top: 1em;
   border-top: 2px solid #E0E9EC;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 80px;
+}
+
+.books-grid {
+  display: flex;
+  flex-direction: row;
+  
+}
+
+.book-card {
+  width: 13rem;
+  margin-right: 15px;
+  box-shadow: 2px 2px 10px 1px gray;
+  transition: box-shadow 0.3s;
+}
+
+.book-card:hover {
+  box-shadow: 2px 2px 10px 1px #7edfff;
 }
 
 
@@ -217,12 +235,17 @@ table td {
   .featurette-heading {
     margin-top: 7rem;
   }
-
 }
 
 @media (min-width: 768px) {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .books-grid {
+    flex-direction: column;
   }
 }
 
